--- a/docs/guide_for_launching_the_provider.adoc
+++ b/docs/guide_for_launching_the_provider.adoc
@@ -35,6 +35,10 @@ mkdir -p ~/.terraform.d/plugins/terraform-virtualbox.local/virtualboxprovider/vi
 [source, shell]
 mkdir Path_to_the_AppData_folder\AppData\Roaming\terraform.d\plugins\terraform-virtualbox.local\virtualboxprovider\virtualbox\1.0.0\windows_amd64
 
+** MacOS
+[source, bash]
+mkdir Path_to_the_AppData_folder\AppData\Roaming\terraform.d\plugins\terraform-virtualbox.local\virtualboxprovider\virtualbox\1.0.0\darwin_x86_64
+
 * Then, copy the terraform-provider-virtualbox to the created directory
 ** Linux
 [source, bash]
@@ -43,6 +47,10 @@ cp terraform-provider-virtualbox ~/.terraform.d/plugins/terraform-virtualbox.loc
 ** Windows
 [source, shell]
 cp terraform-provider-virtualbox.exe Path_to_the_AppData_folder\AppData\Roaming\terraform.d\plugins\terraform-virtualbox.local\virtualboxprovider\virtualbox\1.0.0\windows_amd64
+
+** MacOS
+[source, bash]
+cp terraform-provider-virtualbox.exe Path_to_the_AppData_folder\AppData\Roaming\terraform.d\plugins\terraform-virtualbox.local\virtualboxprovider\virtualbox\1.0.0\darwin_x86_64
 
 . Go to the config folder
 [source, bash]
